--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<section id="step1" class="step view">
+        <legend>step 1 - wybierz dom pomocy społecznej </legend>
+        <fieldset id="dps">
+            <select name="dps"></select>
+        </fieldset>
+        <button class="nextStep">dalej</button>
+</section>
 
 {{outlet}}
